# grotten

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
src/grotten/: __init__.py  __main__.py  actions.py  cli.py  enums.py  game.py  i18n.py  models.py  ui.py
src/grotten/levels/: __init__.py  level_1.py  level_2.py
src/grotten/locale/: base.pot
src/grotten/locale/nb_NO/LC_MESSAGES/: messages.mo  messages.po
tests/: conftest.py  test_actions.py  test_directions.py  test_game.py  test_levels.py  test_locations.py  test_mailbox.py  test_tick.py
