[project]
name = "grotten"
version = "0.1.0"
description = "Text-based dungeon explorer written together with an 8-year-old"
authors = [{ name = "Stein Magnus Jodal", email = "stein.magnus@jodal.no" }]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
grotten = "grotten.cli:app"

[dependency-groups]
dev = [
    "babel>=2.17.0",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mypy>=0.10.3",
    "pytest-watch>=4.2.0",
    "ruff>=0.9.6",
]


[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
# Already covered by tests and careful import ordering:
reportImportCycles = false
# Already covered by flake8-self:
reportPrivateUsage = false


[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D", # pydocstyle
    #
    # These rules interfere with `ruff format`
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",     # flake8-annotations
    "ARG001",  # unused-function-argument
    "D",       # pydocstyle
    "PLR2004", # magic-value-comparison
    "S101",    # assert
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
